--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -30,114 +30,113 @@
     </style>
 
     <!--
-      Temporarily disable cerner-smart-embeddable-lib
-      <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
+        Temporarily disable cerner-smart-embeddable-lib
+        <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     -->
 
 </head>
 
-    <body>
+<body>
 
-        <div id='errors'>
-        </div>
+    <div id='errors'>
+    </div>
 
-        <div id="loading" class="spinner">
-            <div class="bounce1"></div>
-            <div class="bounce2"></div>
-            <div class="bounce3"></div>
-        </div>
+    <div id="loading" class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+    </div>
 
-        <div id='holder' class="container text-container">
-            <div class="row center-text">
-                <div class="col-12">
-                    <h1>BMI Calculator</h1>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-4">
-                    <h2 class="center-text">Patient Resource</h2>
-                    <table class="tab center">
-                        <tr>
-                            <th>First Name:</th>
-                            <td id='fname'></td>
-                        </tr>
-                        <tr>
-                            <th>Last Name:</th>
-                            <td id='lname'></td>
-                        </tr>
-                        <tr>
-                            <th>Gender:</th>
-                            <td id='gender'></td>
-                        </tr>
-                        <tr>
-                            <th>Date of Birth:</th>
-                            <td id='birthdate'></td>
-                        </tr>                        
-                    </table>
-                </div>
-
-                <div class="col-8 center-text">
-                    <h2>Body Mass Index (BMI)</h2>
-                    <div id="bmi"></div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-4">
-                    <h2 class="center-text">Observation & Medication Resources</h2>
-                    <table class="tab center">
-                        <tr>
-                            <th>Height:</th>
-                            <td id='height'></td>
-                        </tr>
-                        <tr>
-                            <th>Weight:</th>
-                            <td id='weight'></td>
-                        </tr>                        
-                    </table>
-                </div>
-
-                <div class="col-8 center-text">
-                    <img src="./src/images/logo.png" alt="W01: FHIR Starter - Building your first SMART on FHIR app" />
-                </div>
+    <div id='holder' class="container text-container">
+        <div class="row center-text">
+            <div class="col-12">
+                <h1>BMI Calculator</h1>
             </div>
         </div>
 
-        <!-- Required JS files to enable this page to embed within an MPage -->
-        <!--
-            Temporarily disable cerner-smart-embeddable-lib
-            <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
-            <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
-        -->
+        <div class="row">
+            <div class="col-4">
+                <h2 class="center-text">Patient Resource</h2>
+                <table class="tab center">
+                    <tr>
+                        <th>First Name:</th>
+                        <td id='fname'></td>
+                    </tr>
+                    <tr>
+                        <th>Last Name:</th>
+                        <td id='lname'></td>
+                    </tr>
+                    <tr>
+                        <th>Gender:</th>
+                        <td id='gender'></td>
+                    </tr>
+                    <tr>
+                        <th>Date of Birth:</th>
+                        <td id='birthdate'></td>
+                    </tr>
+                </table>
+            </div>
 
-        <!-- Application-level javascript-->
-        <script src='./src/js/example-smart-app.js'></script>
+            <div class="col-8 center-text">
+                <h2>Body Mass Index (BMI)</h2>
+                <div id="bmi"></div>
+            </div>
+        </div>
 
-        <!-- FHIR Client JS Library -->
-        <script src='./lib/js/fhir-client-v0.1.12.js'></script>
+        <div class="row">
+            <div class="col-4">
+                <h2 class="center-text">Observation Resource</h2>
+                <table class="tab center">
+                    <tr>
+                        <th>Height:</th>
+                        <td id='height'></td>
+                    </tr>
+                    <tr>
+                        <th>Weight:</th>
+                        <td id='weight'></td>
+                    </tr>
+                </table>
+            </div>
 
-        <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
-        <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-        <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+            <div class="col-8 center-text">
+                <img src="./src/images/logo.png" alt="W01: FHIR Starter - Building your first SMART on FHIR app" />
+            </div>
+        </div>
+    </div>
 
-        <script>
-            extractData().then(
+    <!-- Required JS files to enable this page to embed within an MPage -->
+    <!--
+        Temporarily disable cerner-smart-embeddable-lib
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
+        <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
+    -->
+    <!-- Application-level javascript-->
+    <script src='./src/js/example-smart-app.js'></script>
 
-                //Display Patient Demographics and Observations if extractData was success
-                function (p) {
-                    drawVisualization(p);
-                },
+    <!-- FHIR Client JS Library -->
+    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
 
-                //Display 'Failed to call FHIR Service' if extractData failed
-                function () {
-                    $('#loading').hide();
-                    $('#errors').html('<p> Failed to call FHIR Service </p>');
-                }
-            );
-        </script>
+    <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
+    <!-- https://github.com/cerner/fhir-client-cerner-additions -->
+    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    </body>
+    <script>
+        extractData().then(
+
+            //Display Patient Demographics and Observations if extractData was success
+            function (p) {
+                drawVisualization(p);
+            },
+
+            //Display 'Failed to call FHIR Service' if extractData failed
+            function () {
+                $('#loading').hide();
+                $('#errors').html('<p> Failed to call FHIR Service </p>');
+            }
+        );
+    </script>
+
+</body>
 
 </html>
