--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -9,11 +9,11 @@
     <!-- Simple Grid CSS: https://simplegrid.io/ -->
     <link rel='stylesheet' type="text/css" href="./src/css/simple-grid.css" />
 
-    <!-- Relax CSS: https://ziyadsk.github.io/relaxCSS/ -->
-    <link rel='stylesheet' type="text/css" href="./src/css/relaxCSS.css" />
+    <!-- Relax CSS: https://ziyadsk.github.io/relaxCSS/ 
+    <link rel='stylesheet' type="text/css" href="./src/css/relaxCSS.css" /> -->
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
+    <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'/>
 
     <style>
         #bmi {
